--- a/index.html
+++ b/index.html
@@ -1,12 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <title>BT-Khoa-K2(HTML-CSS)</title>
 </head>
+
 <body>
-    
+  <header class="header">
+    <div class="header-center">
+      <div class="div-logo">
+        <img src="/assets/images/logo dark.png" class="logo">
+      </div>
+      <div class="div-nav">
+        <div class="header-item">
+          <p class="header-p">Home</p>
+        </div>
+        <div class="header-item">
+          <p class="header-p">Product</p>
+        </div>
+        <div class="header-item">
+          <p class="header-p">About</p>
+        </div>
+        <div class="header-item">
+          <p class="header-p">Contact</p>
+        </div>
+      </div>
+      <div class="div-login">
+        <button class="btn-login">
+          <p class="header-p" style="margin: auto;">Login</p>
+        </button>
+      </div>
+    </div>
+  </header>
+
+  <div class="body">
+    <section class="section section-1">
+      <center>
+        <h2 class="sec1-h2">Work at the speed of thought</h2>
+        <p class="sec1-p">
+          Most calendars are designed for teams. Slate is designed for freelancers who want a simple way
+          to plan their schedule.</p>
+      </center>
+      <div class="sec1-btn">
+        <button class="btn-try">
+          <p class="header-p" style="margin: auto;">Try For Free</p>
+        </button>
+        <button class="btn-learn">
+          <p class="header-p" style="margin: auto;">Learn More</p>
+        </button>
+      </div>
+      <div class="sec1-img">
+        <img src="/assets/images/screens.png" class="sec1-imgbgr">
+      </div>
+    </section>
+    <section class="section-2">
+      <div class="sec2-div1">
+        <center>
+          <h2 class="sec1-h2">FEATURES</h2>
+          <p class="sec1-p">
+            Most calendars are designed for teams. Slate is designed for
+            freelancers who want a simple way to plan their schedule.</p>
+        </center>
+      </div>
+      <div class="sec2-div2">
+        <div class="sec2-div2-img">
+          <img src="/assets/images/Chat Bot.png" style="height: 100%;">
+          <img src="/assets/images/Line Chart 1.png" class="sec2-div2-img1">
+        </div>
+        <div class="sec2-div2-info">
+          <div style="height: 100%;">
+            <div style="height: 33.33%;">
+              <div class="sec2-div2-item">
+                <img src="/assets/images/ic_round-restaurant-menu.png" class="sec2-div2-icon1">
+                <h2 class="sec2-div2-h2">A single source of truth</h2>
+              </div>
+              <p class="sec2-div2-p">When you add work to your
+                Slate calendar we automatically
+                calculate useful insights
+              </p>
+            </div>
+            <div style="height: 33.33%;">
+              <div class="sec2-div2-item">
+                <img src="/assets/images/mdi_alien-outline.png" class="sec2-div2-icon1">
+                <h2 class="sec2-div2-h2">Intuitive interface</h2>
+              </div>
+              <p class="sec2-div2-p">When you add work to your
+                Slate calendar we automatically
+                calculate useful insights
+              </p>
+            </div>
+            <div style="height: 33.33%;">
+              <div class="sec2-div2-item">
+                <img src="/assets//images/mdi_all-inclusive.png" class="sec2-div2-icon1">
+                <h2 class="sec2-div2-h2">Or with rules</h2>
+              </div>
+              <p class="sec2-div2-p">When you add work to your
+                Slate calendar we automatically
+                calculate useful insights
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-3">
+      <div class="sec3-div1">
+        <div>
+          <center>
+            <h2 class="sec1-h2 sec3-h2">Contents</h2>
+            <p class="sec1-p">
+              We focus on ergonomics and meeting you where you work.
+              It's only a keystroke away.</p>
+          </center>
+          <div class="sec3-div">
+            <div class="sec3-item">
+              <center class="sec3-center">
+                <h3 class="sec3-div-h3">Work</h3>
+                <p class="sec3-div-p">Ever wondered if you're too reliant
+                  on a client for work? Slate helps
+                  you identify .
+                </p>
+                <button class="sec3-btn-sin">
+                  <p class="header-p" style="margin: auto;">Sign Up</p>
+                </button>
+                <img src="/assets/images/Macbook Pro.png" class="sec3-img1">
+              </center>
+
+            </div>
+            <div class="sec3-item">
+              <center class="sec3-center">
+                <h3 class="sec3-div-h3">Design with real data</h3>
+                <p class="sec3-div-p">Ever wondered if you're too reliant
+                  on a client for work? Slate helps
+                  you identify .
+                </p>
+                <button class="sec3-btn-try">
+                  <p class="header-p" style="margin: auto;">Try For Free</p>
+                </button>
+                <img src="/assets/images/Boards Notifications.png" class="sec3-img2">
+              </center>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+  <footer class="footer">
+
+  </footer>
 </body>
+
 </html>
