--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   </header>
 
   <div class="body">
+
+    <!-- section-1 -->
     <section class="section section-1">
       <center>
         <h2 class="sec1-h2">Work at the speed of thought</h2>
@@ -59,6 +61,8 @@
         <img src="/assets/images/screens.png" class="sec1-imgbgr">
       </div>
     </section>
+
+    <!-- section-2 -->
     <section class="section-2">
       <div class="sec2-div1">
         <center>
@@ -109,6 +113,8 @@
         </div>
       </div>
     </section>
+
+    <!-- section-3 -->
     <section class="section-3">
       <div class="sec3-div1">
         <div>
@@ -131,7 +137,6 @@
                 </button>
                 <img src="/assets/images/Macbook Pro.png" class="sec3-img1">
               </center>
-
             </div>
             <div class="sec3-item">
               <center class="sec3-center">
@@ -145,10 +150,139 @@
                 </button>
                 <img src="/assets/images/Boards Notifications.png" class="sec3-img2">
               </center>
-
             </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- section-4 -->
+    <section class="section-4">
+      <div class="sec4-div">
+        <center>
+          <h2 class="sec1-h2 sec3-h2">Gallery</h2>
+          <p class="sec1-p">
+            We focus on ergonomics and meeting you where you work. 
+            It's only a keystroke away.</p>
+        </center>
+        <div class="sec4-div1">
+          <img class="sec4-img1" src="/assets/images/Rectangle7.png">
+          <img class="sec4-img1" src="/assets/images/Rectangle6.png">
+          <img class="sec4-img1" src="/assets/images/Rectangle5.png">
+          <img class="sec4-img1" src="/assets/images/Rectangle4.png">
+        </div>
+        <div class="sec4-div2">
+          <img class="sec4-img2" src="/assets/images/Rectangle3.png">
+          <img class="sec4-img1" src="/assets/images/Rectangle2.png">
+          <img class="sec4-img2" src="/assets/images/Rectangle1.png">
+        </div>
+        <center>
+          <button class="sec4-btn">
+            <p class="header-p" style="margin: auto;">See More</p>
+          </button>
+        </center>
+      </div>
+    </section>
+
+    <!-- section-5 -->
+    <section class="section-5">
+      <div class="sec5-div">
+        <center>
+          <h2 class="sec1-h2 sec3-h2">Partners</h2>
+          <p class="sec1-p">
+            We focus on ergonomics and meeting you where you work. 
+            It's only a keystroke away.</p>
+        </center>
+        <div class="sec5-div-icon">
+          <img src="/assets/icon/logos_apple-app-store.png" class="sec5-icon">
+          <img src="/assets/icon/logos_apiary.png" class="sec5-icon">
+          <img src="/assets/icon/logos_android-icon.png" class="sec5-icon">
+          <img src="/assets/icon/logos_basecamp.png" class="sec5-icon">
+          <img src="/assets/icon/logos_airbnb.png" class="sec5-icon">
+          <img src="/assets/icon/logos_ibm.png" class="sec5-icon">
+        </div>
+      </div>
+    </section>
+
+    <!-- section-6 -->
+    <section class="section-6">
+      <div class="sec6-div">
+        <center>
+          <h2 class="sec1-h2">Testimonials</h2>
+        </center>
+        <div class="sec6-div-item1">
+          <div style="width: 50%;height: 100%;">
+            <div class="div-item">
+              <div class="sec2-div2-item">
+                <img src="/assets/images/avatar1.png" class="sec6-div2-icon1">
+                <h2 class="sec6-div2-h2">Carlie Bell Designer</h2>
+              </div>
+              <p class="sec2-div2-p">
+                Slate helps you see how many more days 
+                you need to work to reach your financial 
+                goal for the month and year. Slate helps 
+                you see how many more days 
+                you need to work to reach your financial 
+                goal for the month and year.your financial 
+                goal for the month and year.
+              </p>
+            </div>
+            <div class="div-item">
+              <div class="sec2-div2-item">
+                <img src="/assets/images/avatar2.png" class="sec6-div2-icon1">
+                <h2 class="sec6-div2-h2">Ralph Fisher Designer</h2>
+              </div>
+              <p class="sec2-div2-p">
+                Slate helps you see how many more days 
+                you need to work to reach your financial 
+                goal for the month and year. Slate helps 
+                you see how many more days 
+                you need to work to reach your financial 
+                goal for the month and year.your financial 
+                goal for the month and year.
+              </p>
+            </div>
+          </div>
+          <div style="width: 50%;height: 100%;">
+            <div class="div-item">
+              <div class="sec2-div2-item">
+                <img src="/assets/images/avatar.png" class="sec6-div2-icon1">
+                <h2 class="sec6-div2-h2">Francisco Lane Designer</h2>
+              </div>
+              <p class="sec2-div2-p">
+                Slate helps you see how many more days 
+                you need to work to reach your financial 
+                goal for the month and year. Slate helps 
+                you see how many more days 
+                you need to work to reach your financial 
+                goal for the month and year.your financial 
+                goal for the month and year.
+              </p>
+            </div>
+            <div class="div-item">
+              <div class="sec2-div2-item">
+                <img src="/assets/images/avatar3.png" class="sec6-div2-icon1">
+                <h2 class="sec6-div2-h2">Jorge Murphy Designer</h2>
+              </div>
+              <p class="sec2-div2-p">
+                Slate helps you see how many more days 
+                you need to work to reach your financial 
+                goal for the month and year. Slate helps 
+                you see how many more days 
+                you need to work to reach your financial 
+                goal for the month and year.your financial 
+                goal for the month and year.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- section-7 -->
+    <section class="section-7">
+      <div class="sec7-div">
+        
       </div>
     </section>
   </div>
