--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
   </div>
   <footer class="footer">
     <div class="footer-div">
-      <div style="width: 30%;height: 100%;">
+      <div class="footer-item">
         <center>
           <h3 class="fff">Fingertipe</h3>
           <p class="fff">Home</p>
@@ -314,7 +314,7 @@
         </center>
         
       </div>
-      <div style="width: 30%;height: 100%;">
+      <div class="footer-item">
         <center>
           <h3 class="fff">Resources</h3>
           <p class="fff">Home</p>
@@ -323,7 +323,7 @@
           <p class="fff">Updates</p>
         </center>
       </div>
-      <div style="width: 30%;height: 100%;">
+      <div class="footer-item">
         <center>
           <h3 class="fff">About</h3>
           <p class="fff">Home</p>
