--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <!-- Header -->
   <header class="header">
     <div class="header-center">
       <div class="div-logo">
@@ -39,6 +40,7 @@
     </div>
   </header>
 
+  <!-- Body -->
   <div class="body">
 
     <!-- section-1 -->
@@ -300,8 +302,9 @@
         <div style="width: 20%;"></div>
       </div>
     </section>
-
   </div>
+
+  <!-- Footer -->
   <footer class="footer">
     <div class="footer-div">
       <div class="footer-item">
